<resources>
    <string name="app_name">Walkinggame</string>
    <string name="what_s_your_username">Username:</string>
    <string name="name">Name</string>
    <string name="todo">TODO</string>
    <string name="warrior">Warrior</string>
    <string name="mage">Mage</string>
    <string name="play">Save changes</string>
    <string name="coins">Coins:</string>
    <string name="_0">0</string>
    <string name="welcome">Welcome!</string>
    <string name="walk">Walk</string>
    <string name="map">Map</string>
    <string name="inventory">Inventory</string>
    <string name="log">Log</string>
    <string name="choose_a_class_for_your_journey">Choose a class for your journey</string>
    <string name="username_can_t_be_longer_than_30_characters">Username can\'t be longer than 30 characters</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="saved">Saved</string>
</resources>